--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="studentManager">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="lib/angular/angular.js"></script>
-  <script src="app.module.js"></script>
-  <script src="student-list/student-list.module.js"></script>
-  <script src="student-list/student-list.component.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My student list</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="lib/angular/angular.js"></script>
+    <script src="app.module.js"></script>
+    <script src="student-list/student-list.module.js"></script>
+    <script src="student-list/student-list.component.js"></script>
 </head>
 <body>
 
-  <div class="container">
+<div class="container">
     <div class="row">
-      <div class="col-md-4" style="background-color: bisque"></div>
-      <div class="col-md-8">
+        <div class="col-md-4" style="background-color: bisque"></div>
+        <div class="col-md-8">
 
-        <student-list></student-list>
+            <student-list></student-list>
 
-      </div>
+        </div>
     </div>
-  </div>
+</div>
 
 </body>
 </html>
