--- a/app/index.html
+++ b/app/index.html
@@ -36,94 +36,118 @@
     </div>
 </div>
 <script>
-    // set the dimensions and margins of the graph
-    var width = 350
-    height = 350
-    margin = 40
 
-    // The radius of the pieplot is half the width or half the height (smallest one). I substract a bit of margin.
-    var radius = Math.min(width, height) / 2 - margin
+    class Donut {
 
-    // append the svg object to the div called 'my_dataviz'
-    var svg = d3.select("#my_graph")
-        .append("svg")
-        .attr("width", width)
-        .attr("height", height)
-        .append("g")
-        .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+        static get defaults() {
+            return {
+                margin: { top: 15, right: 15, bottom: 30, left: 15 }
+            };
+        }
 
-    // Create dummy data
-    var data = {"Sai gon": 20, "Hai duong": 40, "Ha noi":20, "Hai phong":20}
+        constructor(config) {
+            this.configure(config);
+            this.init();
+        }
 
-    // set the color scale
-    var color = d3.scaleOrdinal()
-        .domain(["Sai gon", "Hai duong", "Ha noi", "Hai phong"])
-        .range(d3.schemeDark2);
+        configure(config) {
+            Object.assign(this, Donut.defaults, config);
+        }
 
-    // Compute the position of each group on the pie:
-    var pie = d3.pie()
-        .sort(null) // Do not sort group by size
-        .value(function(d) {return d.value; })
-    var data_ready = pie(d3.entries(data))
+        init() {
+            const { margin, data } = this;
+            const outerWidth = 350;
+            const outerHeight = 350;
+            const width = outerWidth - margin.left - margin.right;
+            const height = outerHeight - margin.top - margin.bottom;
+            const r = Math.min(width, height) / 2;
 
-    // The arc generator
-    var arc = d3.arc()
-        .innerRadius(radius * 0.5)         // This is the size of the donut hole
-        .outerRadius(radius * 0.8)
+            var nodeWidth = (d) => d.getBBox().width;
 
-    // Another arc that won't be drawn. Just for labels positionning
-    var outerArc = d3.arc()
-        .innerRadius(radius * 0.9)
-        .outerRadius(radius * 0.9)
 
-    // Build the pie chart: Basically, each part of the pie is a path that we build using the arc function.
-    svg
-        .selectAll('allSlices')
-        .data(data_ready)
-        .enter()
-        .append('path')
-        .attr('d', arc)
-        .attr('fill', function(d){ return(color(d.data.key)) })
-        .attr("stroke", "white")
-        .style("stroke-width", "2px")
-        .style("opacity", 0.7)
+            const cScale = d3.scaleOrdinal(d3.schemeCategory20b);
 
-    // Add the polylines between chart and labels:
-    svg
-        .selectAll('allPolylines')
-        .data(data_ready)
-        .enter()
-        .append('polyline')
-        .attr("stroke", "black")
-        .style("fill", "none")
-        .attr("stroke-width", 1)
-        .attr('points', function(d) {
-            var posA = arc.centroid(d) // line insertion in the slice
-            var posB = outerArc.centroid(d) // line break: we use the other arc generator that has been built only for that
-            var posC = outerArc.centroid(d); // Label position = almost the same as posB
-            var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2 // we need the angle to see if the X position will be at the extreme right or extreme left
-            posC[0] = radius * 0.95 * (midangle < Math.PI ? 1 : -1); // multiply by 1 or -1 to put it on the right or on the left
-            return [posA, posB, posC]
-        })
+            const arc = d3.arc()
+                .outerRadius(r)
+                .innerRadius(r - 45)
+            ;
 
-    // Add the polylines between chart and labels:
-    svg
-        .selectAll('allLabels')
-        .data(data_ready)
-        .enter()
-        .append('text')
-        .text( function(d) { console.log(d.data.key) ; return d.data.key } )
-        .attr('transform', function(d) {
-            var pos = outerArc.centroid(d);
-            var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
-            pos[0] = radius * 0.99 * (midangle < Math.PI ? 1 : -1);
-            return 'translate(' + pos + ')';
-        })
-        .style('text-anchor', function(d) {
-            var midangle = d.startAngle + (d.endAngle - d.startAngle) / 2
-            return (midangle < Math.PI ? 'start' : 'end')
-        })
+            const pie = d3.pie()
+                .value(d => d.value)
+            ;
 
+            const svg = d3.select('#my_graph')
+                .append('svg')
+                .attr('width', outerWidth)
+                .attr('height', outerHeight)
+                .append('g')
+                .attr('transform', `translate(${margin.left},${margin.top})`)
+            ;
+
+            svg.append('g')
+                .attr('class', 'arc')
+                .attr('transform', `translate(${width/2},${height/2})`)
+                .selectAll('path')
+                .data(pie(data))
+                .enter()
+                .append('path')
+                .attr('d', arc)
+                .style('fill', d => cScale(d.value))
+            ;
+
+            const legend = svg.append('g')
+                .attr('class', 'legend')
+                .attr('transform', 'translate(0,0)');
+
+            const lg = legend.selectAll('g')
+                .data(data)
+                .enter()
+                .append('g')
+                .attr('transform', (d,i) => `translate(${i * 100},${height + 15})`);
+
+            lg.append('rect')
+                .style('fill', d => cScale(d.value))
+                .attr('x', 0)
+                .attr('y', 0)
+                .attr('width', 10)
+                .attr('height', 10);
+
+            lg.append('text')
+                .style('font-family', 'Georgia')
+                .style('font-size', '13px')
+                .attr('x', 17.5)
+                .attr('y', 10)
+                .text(d => d.label);
+
+            let offset = 0;
+            lg.attr('transform', function(d, i) {
+                let x = offset;
+                offset += nodeWidth(this) + 10;
+                return `translate(${x},${height + 10})`;
+            });
+
+            legend.attr('transform', function() {
+                return `translate(${(width - nodeWidth(this)) / 2},${0})`
+            });
+        }
+
+        render() {
+
+        }
+
+    }
+
+    new Donut({
+        element: 'body',
+        margin: { top: 10, right: 0, bottom: 30, left: 0},
+        data: [
+            {label: 'Hai phong', value: 20},
+            {label: 'Hai duong', value: 40},
+            {label: 'Ha noi', value: 20},
+            {label: 'Sai gon', value: 20}
+        ]
+
+    });
 </script>
 </body>
 </html>
