change sort icon

--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -2,20 +2,16 @@
     <thead class="thead-light">
         <tr>
         <th>Name
-            <a ng-click="sortDown('name')" class="fas fa-sort-down"></a>
-            <a ng-click="sortUp('name')" class="fas fa-sort-up"></a>
+            <a ng-click="sort('name')" class="fas fa-sort"></a>
         </th>
         <th>Age
-            <a ng-click="sortDown('age')" class="fas fa-sort-down"></a>
-            <a ng-click="sortUp('age')" class="fas fa-sort-up"></a>
+            <a ng-click="sort('age')" class="fas fa-sort"></a>
         </th>
         <th>Gender
-            <a ng-click="sortDown('gender')" class="fas fa-sort-down"></a>
-            <a ng-click="sortUp('gender')" class="fas fa-sort-up"></a>
+            <a ng-click="sort('gender')" class="fas fa-sort"></a>
         </th>
         <th>Address
-            <a ng-click="sortDown('address')" class="fas fa-sort-down"></a>
-            <a ng-click="sortUp('address')" class="fas fa-sort-up"></a>
+            <a ng-click="sort('address')" class="fas fa-sort"></a>
         </th>
         </tr>
     </thead>
