--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My student list</title>
     <meta name="description" content="">
-    <!-- Load d3.js & color scale -->
-    <script src="http://d3js.org/d3.v4.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
+    <!--load highchart-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -26,8 +29,9 @@
     <div class="row">
 
         <div class="col-md-4" id="my_graph">
-
         </div>
+
+
         <div class="col-md-8">
 
             <student-list></student-list>
@@ -36,119 +40,81 @@
     </div>
 </div>
 <script>
-
-    class Donut {
-
-        static get defaults() {
-            return {
-                margin: { top: 15, right: 15, bottom: 30, left: 15 }
-            };
-        }
-
-        constructor(config) {
-            this.configure(config);
-            this.init();
-        }
-
-        configure(config) {
-            Object.assign(this, Donut.defaults, config);
-        }
-
-        init() {
-            const { margin, data } = this;
-            const outerWidth = 350;
-            const outerHeight = 350;
-            const width = outerWidth - margin.left - margin.right;
-            const height = outerHeight - margin.top - margin.bottom;
-            const r = Math.min(width, height) / 2;
-
-            var nodeWidth = (d) => d.getBBox().width;
-
-
-            const cScale = d3.scaleOrdinal().range(["#65C400" , "#2290EE" , "#FFC096", "#5e5e5e"]);
-
-            const arc = d3.arc()
-                .outerRadius(r)
-                .innerRadius(r - 45)
-            ;
-
-            const pie = d3.pie()
-                .value(d => d.value)
-            ;
-
-            const svg = d3.select('#my_graph')
-                .append('svg')
-                .attr('width', outerWidth)
-                .attr('height', outerHeight)
-                .append('g')
-                .attr('transform', `translate(${margin.left},${margin.top})`)
-            ;
-
-            svg.append('g')
-                .attr('class', 'arc')
-                .attr('transform', `translate(${width/2},${height/2})`)
-                .selectAll('path')
-                .data(pie(data))
-                .enter()
-                .append('path')
-                .attr('d', arc)
-                .style('fill', d => cScale(d.value))
-            ;
-
-            const legend = svg.append('g')
-                .attr('class', 'legend')
-                .attr('transform', 'translate(0,0)');
-
-            const lg = legend.selectAll('g')
-                .data(data)
-                .enter()
-                .append('g')
-                .attr('transform', (d,i) => `translate(${i * 100},${height + 15})`);
-
-            lg.append('rect')
-                .style('fill', d => cScale(d.value))
-                .attr('x', 0)
-                .attr('y', 0)
-                .attr('width', 10)
-                .attr('height', 10);
-
-            lg.append('text')
-                .style('font-family', 'Georgia')
-                .style('font-size', '13px')
-                .attr('x', 17.5)
-                .attr('y', 10)
-                .text(d => d.label);
-
-            let offset = 0;
-            lg.attr('transform', function(d, i) {
-                let x = offset;
-                offset += nodeWidth(this) + 10;
-                return `translate(${x},${height + 10})`;
-            });
-
-            legend.attr('transform', function() {
-                return `translate(${(width - nodeWidth(this)) / 2},${0})`
-            });
-        }
-
-        render() {
-
-        }
-
-    }
-
-    new Donut({
-        element: 'body',
-        margin: { top: 10, right: 0, bottom: 30, left: 0},
-        data: [
-            {label: 'Hai phong', value: 20},
-            {label: 'Hai duong', value: 40},
-            {label: 'Ha noi', value: 20},
-            {label: 'Sai gon', value: 20}
-
-        ]
-
+    // Create the chart
+    chart = new Highcharts.Chart({
+        chart: {
+            renderTo: 'my_graph',
+            type: 'pie'
+        },
+        title: {
+            text: 5 +'<br>'+'students',
+            align: 'center',
+            verticalAlign: 'middle',
+            y: -30
+        },
+        yAxis: {
+            title: {
+                text: 'Total percent market share'
+            }
+        },
+        plotOptions: {
+            pie: {
+                shadow: false,
+                point: {
+                    events: {
+                        mouseOver: function(e) {
+                            this.originalRadius = this.graphic.r;
+                            this.graphic.animate({
+                                r: this.originalRadius*1.07
+                            }, 200);
+                        },
+                        mouseOut: function(e) {
+                            this.graphic.animate({
+                                r: this.originalRadius
+                            }, 200);
+                        }
+                    }
+                }
+            }
+        },
+        tooltip: {
+            formatter: function() {
+                return '<b>' + this.point.name + '</b>: ' + this.y + ' %';
+            }
+        },
+        series: [{
+            name: 'Data',
+            data: [
+                ["Hai phong", 20],
+                ["Hai duong", 40],
+                ["Sai gon", 20],
+                ["Ha noi", 20]
+            ],
+            size: '100%',
+            innerSize: '70%',
+            showInLegend: true,
+            dataLabels: {
+                enabled: false
+            },
+            states: {
+                hover: {
+                    halo: false
+                }
+            },
+        }]
     });
+
+    var circleradius = chart;
+    console.log(chart);
+
+    var test = chart.options.series[0].innerSize * chart.Height
+    console.log(test);
+
+    // Render the circle
+    chart.renderer.circle('50%', '50%', 130).attr({
+        fill: '#fff',
+    }).add();
+
 </script>
 </body>
 </html>
