change table color

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="app.css">
     <script src="lib/angular/angular.js"></script>
     <script src="app.module.js"></script>
     <script src="student-list/student-list.module.js"></script>
@@ -28,13 +29,19 @@
 
     <div class="row">
 
-        <div class="col-md-4" id="my_graph">
+        <div class="col-md-4">
+            <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">Visualization</div>
+            <div id="my_graph"></div>
         </div>
 
 
         <div class="col-md-8">
+            <div style="font-size: 18px; border-bottom: 1px solid #D9D9D9">
+                <span class="dot"></span>
+                Student List
+            </div>
+            <div><student-list></student-list></div>
 
-            <student-list></student-list>
 
         </div>
     </div>
