--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,15 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
     <link rel="stylesheet" href="app.css">
     <script src="lib/angular/angular.js"></script>
     <script src="app.module.js"></script>
@@ -36,15 +41,13 @@
 
 
         <div class="col-md-8">
-            <div style="font-size: 18px; border-bottom: 1px solid #D9D9D9">
-                <span class="dot"></span>
-                Student List
-            </div>
-            <div><student-list></student-list></div>
 
+                <student-list></student-list>
 
         </div>
     </div>
+
+
 </div>
 
 
@@ -56,7 +59,7 @@
             type: 'pie'
         },
         title: {
-            text: 5 +'<br>'+'students',
+            text: 5 + '<br>' + 'students',
             align: 'center',
             verticalAlign: 'middle',
             y: -30
@@ -71,13 +74,13 @@
                 shadow: false,
                 point: {
                     events: {
-                        mouseOver: function(e) {
+                        mouseOver: function (e) {
                             this.originalRadius = this.graphic.r;
                             this.graphic.animate({
-                                r: this.originalRadius*1.07
+                                r: this.originalRadius * 1.07
                             }, 200);
                         },
-                        mouseOut: function(e) {
+                        mouseOut: function (e) {
                             this.graphic.animate({
                                 r: this.originalRadius
                             }, 200);
@@ -87,7 +90,7 @@
             }
         },
         tooltip: {
-            formatter: function() {
+            formatter: function () {
                 return '<b>' + this.point.name + '</b>: ' + this.y + ' %';
             }
         },
