change table configuration function

--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,13 @@
     <div class="row">
 
         <div class="col-md-4">
-            <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">Visualization</div>
-            <div id="my_graph"></div>
+            <div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    Visualization
+                </div>
+                <div id="my_graph"></div>
+            </div>
+
         </div>
 
 
