--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -22,22 +22,22 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="toggle" ng-change="toggleCheck()">All
+                        <input type="checkbox" ng-model="checkAll" ng-change="check()">All
                     </div>
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="name">name
+                        <input type="checkbox" ng-model="name">Name
                     </div>
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="age">age
+                        <input type="checkbox" ng-model="age">Age
                     </div>
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="gender">gender
+                        <input type="checkbox" ng-model="gender">Gender
                     </div>
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="address">address
+                        <input type="checkbox" ng-model="address">Address
                     </div>
                     <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="phoneNum">phone num
+                        <input type="checkbox" ng-model="phoneNum">Phone number
                     </div>
                 </div>
 
