using navbar bootstrap

--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,59 +1,71 @@
-<div style="font-size: 18px; border-bottom: 1px solid #D9D9D9">
-    <span class="dot"></span>
+<nav class="navbar navbar-expand-lg">
 
-    Student List
+    <div id="navbarNavDropdown" class="navbar-collapse collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                Student List
+            </li>
 
-    <!-- Button to Open the Modal -->
-    <a data-toggle="modal" data-target="#myModal">
-        Table configuration
-    </a>
+        </ul>
 
-    <!-- The Modal -->
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Displayed columns</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="fa fa-ellipsis-v" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a data-toggle="modal" data-target="#myModal">Table configuration</a>
+                    <a onclick="exportTableToExcel('myTable','students-data')">Export</a>
                 </div>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-                <!-- Modal body -->
-                <div class="modal-body">
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="checkAll" ng-change="check()">All
-                    </div>
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="name">Name
-                    </div>
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="age">Age
-                    </div>
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="gender">Gender
-                    </div>
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="address">Address
-                    </div>
-                    <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
-                        <input type="checkbox" ng-model="phoneNum">Phone number
-                    </div>
-                </div>
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
 
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Displayed columns</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="checkAll" ng-change="check()">All
+                </div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="name">Name
+                </div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="age">Age
+                </div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="gender">Gender
+                </div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="address">Address
+                </div>
+                <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
+                    <input type="checkbox" ng-model="phoneNum">Phone number
+                </div>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
         </div>
     </div>
-
-
 </div>
 
-<table class="table">
+
+<table class="table" id="myTable">
     <tr class="table-header">
         <td ng-if="name">Name
             <a ng-click="sort('name')" class="fas fa-sort"></a>
@@ -73,15 +85,49 @@
     </tr>
 
     <tbody>
-        <tr class="table-body" ng-repeat="student in $ctrl.students | orderBy:sortType:sortRevert">
-            <td ng-if="name">{{student.name}}</td>
-            <td ng-if="age">{{student.age}}</td>
-            <td ng-if="gender">{{student.gender}}</td>
-            <td ng-if="address">{{student.address}}</td>
-            <td ng-if="phoneNum">{{student.phoneNum}}</td>
-        </tr>
 
+    <tr class="table-body" ng-repeat="student in $ctrl.students | orderBy:sortType:sortRevert">
+        <td ng-if="name">{{student.name}}</td>
+        <td ng-if="age">{{student.age}}</td>
+        <td ng-if="gender">{{student.gender}}</td>
+        <td ng-if="address">{{student.address}}</td>
+        <td ng-if="phoneNum">{{student.phoneNum}}</td>
+    </tr>
     </tbody>
 
 
 </table>
+
+
+<script>
+    function exportTableToExcel(tableID, filename = '') {
+        var downloadLink;
+        var dataType = 'application/vnd.ms-excel';
+        var tableSelect = document.getElementById(tableID);
+        var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
+
+        // Specify file name
+        filename = filename ? filename + '.xls' : 'excel_data.xls';
+
+        // Create download link element
+        downloadLink = document.createElement("a");
+
+        document.body.appendChild(downloadLink);
+
+        if (navigator.msSaveOrOpenBlob) {
+            var blob = new Blob(['\ufeff', tableHTML], {
+                type: dataType
+            });
+            navigator.msSaveOrOpenBlob(blob, filename);
+        } else {
+            // Create a link to the file
+            downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
+
+            // Setting the file name
+            downloadLink.download = filename;
+
+            //triggering the function
+            downloadLink.click();
+        }
+    }
+</script>
