add show hide graph function

--- a/app/index.html
+++ b/app/index.html
@@ -33,16 +33,17 @@
     <script src="student-list/student-list.module.js"></script>
     <script src="student-list/student-list.component.js"></script>
 </head>
-<body>
+<body ng-controller="studentManagerController">
 
 <div class="container">
 
     <div class="row">
 
-        <div class="col-md-4">
+        <div class="col-md-4" ng-show="showGraph">
             <div>
                 <div style="font-size: 20px; border-bottom: 1px solid #D9D9D9">
                     Visualization
+                    <button ng-click="toggleShowGraph()">Hide</button>
                 </div>
 
                 <div>
@@ -52,6 +53,10 @@
             </div>
         </div>
 
+        <div class="col-md-1" ng-show="!showGraph">
+            <button ng-click="toggleShowGraph()">Show Graph</button>
+
+        </div>
 
         <div class="col-md-8">
 
