component not work

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div>
-                    <my-donut-chart></my-donut-chart>
+                    <my-donut-chart-component></my-donut-chart-component>
                 </div>
 
             </div>
@@ -74,6 +74,5 @@
 
 </div>
 
-<button ng-click="consoleLo()">console</button>
 </body>
 </html>
