--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div>
-                    <my-donut-chart-component></my-donut-chart-component>
+                    <my-donut-chart></my-donut-chart>
                 </div>
 
             </div>
